test_regress/t/t_math_repl2_bad.out
%Error: t/t_math_repl2_bad.v:28:30: More than a 16 Mbit replication, perhaps the replication factor was two's-complement negative: 4294967291
                                  : ... note: In instance 't'
   28 |          out <= {{(P24 - P29){1'b0}}, in};
      |                              ^
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Internal Error: ../V3Number.h:#: `num` member accessed when data type is UNINITIALIZED
                        ... This fatal error may be caused by the earlier error(s); resolve those first.
